[gd_scene load_steps=25 format=3 uid="uid://dqvxh7hfruior"]

[ext_resource type="Script" uid="uid://dcgrs14aq5le7" path="res://scenes/minigame/minigame.gd" id="1_ms23d"]
[ext_resource type="Script" uid="uid://cwpnhbyicg8tg" path="res://addons/godot-xr-tools/xr/start_xr.gd" id="1_r3185"]
[ext_resource type="PackedScene" uid="uid://dhmr6f84m60s7" path="res://components/World/world.tscn" id="2_yn1os"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="3_ms23d"]
[ext_resource type="Texture2D" uid="uid://bd1r51hxtp1at" path="res://addons/kenney_prototype_textures/dark/texture_01.png" id="3_yn1os"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="4_14fvx"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="5_qprf6"]
[ext_resource type="Script" uid="uid://byui6bvwjyv3f" path="res://addons/godot-xr-tools/functions/function_pickup.gd" id="6_0k17t"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="7_ggla5"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_axv1m"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="9_al4os"]
[ext_resource type="Texture2D" uid="uid://f4cm277atxmg" path="res://addons/kenney_prototype_textures/red/texture_03.png" id="12_qprf6"]
[ext_resource type="Texture2D" uid="uid://f08hd67ks3ni" path="res://addons/kenney_prototype_textures/light/texture_01.png" id="13_0k17t"]
[ext_resource type="PackedScene" uid="uid://v47d3rkodm3b" path="res://scenes/cube/plastic.tscn" id="14_b7ekc"]
[ext_resource type="PackedScene" uid="uid://ci8gehmnfljys" path="res://scenes/cube/metal.tscn" id="15_ggla5"]
[ext_resource type="PackedScene" uid="uid://hr1mpcepnxd2" path="res://scenes/cube/paper.tscn" id="16_ggla5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ms23d"]
albedo_texture = ExtResource("3_yn1os")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ggla5"]
albedo_texture = ExtResource("12_qprf6")

[sub_resource type="TorusMesh" id="TorusMesh_r3185"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r3185"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4d6bl"]
albedo_color = Color(1, 0.823529, 0.309804, 1)
albedo_texture = ExtResource("13_0k17t")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qprf6"]
albedo_color = Color(0.0784314, 0.317647, 0.584314, 1)
albedo_texture = ExtResource("13_0k17t")

[sub_resource type="BoxMesh" id="BoxMesh_ggla5"]
size = Vector3(1, 1.25, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_axv1m"]
size = Vector3(1, 1.25, 1)

[node name="MinigameScene" type="Node3D"]
script = ExtResource("1_ms23d")

[node name="XRToolsStartXR" type="Node" parent="."]
script = ExtResource("1_r3185")
metadata/_custom_type_script = "uid://cwpnhbyicg8tg"

[node name="Floor" parent="." instance=ExtResource("2_yn1os")]

[node name="MeshInstance3D" parent="Floor/StaticBody3D" index="0"]
material_override = SubResource("StandardMaterial3D_ms23d")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.817)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="LeftHand" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -1)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/LeftHand" instance=ExtResource("3_ms23d")]

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" instance=ExtResource("4_14fvx")]

[node name="MovementDirect" parent="XROrigin3D/LeftHand" instance=ExtResource("5_qprf6")]

[node name="XRToolsFunctionPickup" type="Node3D" parent="XROrigin3D/LeftHand"]
script = ExtResource("6_0k17t")
metadata/_custom_type_script = "uid://byui6bvwjyv3f"

[node name="RightHand" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -1)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/RightHand" instance=ExtResource("7_ggla5")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" instance=ExtResource("8_axv1m")]

[node name="XRToolsFunctionPickup" type="Node3D" parent="XROrigin3D/RightHand"]
script = ExtResource("6_0k17t")
metadata/_custom_type_script = "uid://byui6bvwjyv3f"

[node name="PlayerBody" parent="XROrigin3D" instance=ExtResource("9_al4os")]

[node name="PlasticCompositionLayer" type="OpenXRCompositionLayerQuad" parent="XROrigin3D" node_paths=PackedStringArray("layer_viewport")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47781, -3.23074)
layer_viewport = NodePath("../../PlasticMessage")
alpha_blend = true

[node name="MetalCompositionLayer" type="OpenXRCompositionLayerQuad" parent="XROrigin3D" node_paths=PackedStringArray("layer_viewport")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50892, 1.47781, -3.23074)
layer_viewport = NodePath("../../MetalMessage")
alpha_blend = true

[node name="PaperCompositionLayer" type="OpenXRCompositionLayerQuad" parent="XROrigin3D" node_paths=PackedStringArray("layer_viewport")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4147, 1.47781, -3.23074)
layer_viewport = NodePath("../../PaperMessage")
alpha_blend = true

[node name="PlasticBin" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -2.5)
collision_layer = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlasticBin"]
transform = Transform3D(0.5, 0, 0, 0, 2, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ggla5")
mesh = SubResource("TorusMesh_r3185")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlasticBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="PlasticBin" type="Area3D" parent="PlasticBin"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlasticBin/PlasticBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="MetalBin" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51062, 0.5, -2.5)
collision_layer = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="MetalBin"]
transform = Transform3D(0.5, 0, 0, 0, 2, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_4d6bl")
mesh = SubResource("TorusMesh_r3185")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MetalBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="MetalBin" type="Area3D" parent="MetalBin"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D2" type="CollisionShape3D" parent="MetalBin/MetalBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="PaperBin" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48938, 0.5, -2.5)
collision_layer = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="PaperBin"]
transform = Transform3D(0.5, 0, 0, 0, 2, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_qprf6")
mesh = SubResource("TorusMesh_r3185")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PaperBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="PaperBin" type="Area3D" parent="PaperBin"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PaperBin/PaperBin"]
shape = SubResource("CylinderShape3D_r3185")

[node name="Plastic" parent="." instance=ExtResource("14_b7ekc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.59889, 1.37133, -0.524602)

[node name="Metal" parent="." instance=ExtResource("15_ggla5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.96686, 1.40143, -0.524602)

[node name="Paper" parent="." instance=ExtResource("16_ggla5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.19721, 1.40143, -0.524602)

[node name="Table" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8638, 0.64931, -0.772917)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Table"]
mesh = SubResource("BoxMesh_ggla5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table"]
shape = SubResource("BoxShape3D_axv1m")

[node name="PlasticMessage" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
render_target_update_mode = 4

[node name="CorrectMessage" type="Control" parent="PlasticMessage"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PlasticMessage/CorrectMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -20.0
offset_right = 68.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlasticMessage/CorrectMessage/CenterContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 64
text = "PLASTIC"

[node name="MetalMessage" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
render_target_update_mode = 4

[node name="CorrectMessage" type="Control" parent="MetalMessage"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MetalMessage/CorrectMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -20.0
offset_right = 68.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MetalMessage/CorrectMessage/CenterContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 64
text = "METAL"

[node name="PaperMessage" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
render_target_update_mode = 4

[node name="CorrectMessage" type="Control" parent="PaperMessage"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PaperMessage/CorrectMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -20.0
offset_right = 68.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PaperMessage/CorrectMessage/CenterContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 64
text = "PAPER"

[connection signal="body_entered" from="PlasticBin/PlasticBin" to="." method="_on_plastic_bin_body_entered"]
[connection signal="body_entered" from="MetalBin/MetalBin" to="." method="_on_metal_bin_body_entered"]
[connection signal="body_entered" from="PaperBin/PaperBin" to="." method="_on_paper_bin_body_entered"]

[editable path="Floor"]
